--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-<div class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar"
-    (mouseover)="toggleSidebar()" (mouseout)="toggleSidebar()" #sidebar>
+<div class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar" (mouseover)="toggleSidebar()" (mouseout)="toggleSidebar()" #sidebar>
     <ul>
 
         <div class="sidebar-header">
@@ -62,6 +61,12 @@
             <a class="nav-link" routerLink="/location">
                 <i class="fas fa-exchange-alt"></i>
                 <span>Location</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/feedback">
+                <i class="fas fa-exchange-alt"></i>
+                <span>FeedBack</span>
             </a>
         </li>
         <li class="nav-item" *ngIf="tokendata?.access  !== 'agent'">
