--- a/src/app/dashboard/location/add-location/add-location.component.html
+++ b/src/app/dashboard/location/add-location/add-location.component.html
@@ -7,7 +7,7 @@
             <div class="container-fluid">
 
                 <div class="row">
-                    <div class="col-12 col-md-10 offset-md-1 mb-4 mt-4">
+                    <div class="col-12 col-md-10 mb-4 mt-4">
                         <div *ngIf="changeType == 'location'">
                             <h2 class="h3 mb-2 text-gray-600 mt-3">Add Location</h2>
                         </div>
@@ -53,7 +53,7 @@
                                 </div>
 
                                 <div class="row mt-3">
-                                    <div class="col-md-3 col-sm-3 form-group">
+                                    <div class="col-4 form-group">
                                         <div class=""><br> <b>Add new Location</b>
                                             <input formControlName="location" class="form-control" type="text" placeholder="Location " />
                                         </div>
@@ -61,7 +61,7 @@
                                 </div>
                                 <div class="row" *ngIf="!user">
 
-                                    <div class="col-md-3 col-sm-3 form-group">
+                                    <div class="col-4 form-group">
                                         <div class=""><br> <b>Add new Sub Location</b>
                                             <input [(ngModel)]="subLocationName" [ngModelOptions]="{standalone: true}" class="form-control" type="text" placeholder="Sub-Location " />
                                         </div>
@@ -69,9 +69,8 @@
                                 </div>
                                 <div class="row" *ngIf="user">
 
-                                    <div class="col-md-3 col-sm-3 form-group">
+                                    <div class="col-4 form-group">
                                         <div class=""><br> <b>Add new Sub Location</b>
-                                            <!-- <input [(ngModel)]="subLocation" [multiple]="true" [ngModelOptions]="{standalone: true}" class="form-control" type="text" placeholder="Sub-Location " (change)="changeSubLocation($event)" /> -->
 
                                             <ng-select [(ngModel)]="subLocation" [multiple]="true" [items]="subLocation" bindLabel="subLocation" bindValue="subLocation" [ngModelOptions]="{standalone: true}" class="ng-select" placeholder="Sub-Location" (change)="changeSubLocation($event)">
                                             </ng-select>
@@ -87,19 +86,18 @@
                             </div>
                             <div *ngIf="changeType == 'subLocation'">
                                 <div class="row mt-5 ml-1">
-                                    <!-- <h2 class="h3 mb-2 text-gray-600"><b>Add Sub Location</b></h2> -->
                                 </div>
                                 <div class="row mt-3">
 
-                                    <div class="col-3">
+                                    <div class="col-4">
                                         <ng-select class="ng-select" formControlName="city" [items]="cities" bindLabel="city" bindValue="city" placeholder="Select City" (change)="changeCity($event)">
                                         </ng-select>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-4">
                                         <ng-select class="ng-select" formControlName="location" [(ngModel)]="selectStringLocations" [items]="locations" bindLabel="location" bindValue="location" (change)="changeLocation($event)" placeholder="Select Location">
                                         </ng-select>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-4">
                                         <ng-select class="ng-select" [(ngModel)]="subLocationsList" [multiple]="true" [ngModelOptions]="{standalone: true}" placeholder="Sub Locations">
                                         </ng-select>
                                     </div>
@@ -107,7 +105,7 @@
 
                                 <div class="row" *ngIf="!user">
 
-                                    <div class="col-md-3 col-sm-3 form-group">
+                                    <div class="col-4 form-group">
                                         <div class="mt-2"><br> <b>Add new Sub Location</b>
                                             <div class="mt-2">
                                                 <input [(ngModel)]="subLocationName" [ngModelOptions]="{standalone: true}" class="form-control" type="text" placeholder="Add Sub Location " />
